# ai-camera-speaker-module

./: .env.example  README.md  main.py  pyproject.toml
